# CeleryFlow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: flow.yaml  quickstart.py
src/celeryflow/: __init__.py  app.py  builder.py  conditions.py  encoding.py  exceptions.py  tasks.py  utils.py
tests/: conftest.py  test_builder.py  test_conditions.py  test_encoding.py  test_integration_redis.py  test_integration_worker.py  test_tasks.py  test_utils.py  test_version.py
