[project]
name = "celeryflow"
version = "0.1.0"
description = "A declarative flow / pipeline orchestration layer on top of Celery."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Yu Ting", email = "nmjk2000@gmail.com" },
]
keywords = ["celery", "workflow", "pipeline", "orchestration", "flow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "celery>=5.3,<6.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
redis = ["redis>=4.5"]

[project.urls]
Homepage = "https://github.com/yu-ting/celeryflow"
Repository = "https://github.com/yu-ting/celeryflow"
Issues = "https://github.com/yu-ting/celeryflow/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pyyaml>=6.0",
    "redis>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/celeryflow"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: tests that require a running broker (Redis)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
